Error Mitigation/MagiCoder/Data/java_lang_invoke/java_lang_invokeOutputResult.txt
Sample: CallSite_2
----------------------------------------------------------------
output:
./Data/java_lang_invoke/javaFiles/CallSite_2.java:9: error: cannot find symbol
            MethodHandles.MethodHandle handle = lookup.findVirtual(CallSite_2.class, "add", MethodType.methodType(void.class, String.class));
                         ^
  symbol:   class MethodHandle
  location: class MethodHandles
1 error


================================================================

Sample: ConstantCallSite_3
----------------------------------------------------------------
output:
./Data/java_lang_invoke/javaFiles/ConstantCallSite_3.java:10: error: cannot find symbol
            MethodHandle methodHandle = MethodHandles.lookup().findVirtual(ArrayList.class, "add", methodType);
                                                                           ^
  symbol:   class ArrayList
  location: class ConstantCallSite_3
./Data/java_lang_invoke/javaFiles/ConstantCallSite_3.java:11: error: cannot find symbol
            ConstantCallSite callSite = ConstantCallSite.create(methodHandle);
                                                        ^
  symbol:   method create(MethodHandle)
  location: class ConstantCallSite
2 errors


================================================================

Sample: MutableCallSite_3
----------------------------------------------------------------
output:
./Data/java_lang_invoke/javaFiles/MutableCallSite_3.java:9: error: no suitable constructor found for MutableCallSite(no arguments)
        MutableCallSite callSite = new MutableCallSite();
                                   ^
    constructor MutableCallSite.MutableCallSite(MethodType) is not applicable
      (actual and formal argument lists differ in length)
    constructor MutableCallSite.MutableCallSite(MethodHandle) is not applicable
      (actual and formal argument lists differ in length)
./Data/java_lang_invoke/javaFiles/MutableCallSite_3.java:12: error: cannot find symbol
        Method method = ArrayList.class.getMethod("add", Object.class);
                        ^
  symbol:   class ArrayList
  location: class MutableCallSite_3
./Data/java_lang_invoke/javaFiles/MutableCallSite_3.java:19: error: cannot find symbol
        ArrayList<String> list = new ArrayList<>();
        ^
  symbol:   class ArrayList
  location: class MutableCallSite_3
./Data/java_lang_invoke/javaFiles/MutableCallSite_3.java:19: error: cannot find symbol
        ArrayList<String> list = new ArrayList<>();
                                     ^
  symbol:   class ArrayList
  location: class MutableCallSite_3
4 errors


================================================================

Sample: MutableCallSite_5
----------------------------------------------------------------
output:
./Data/java_lang_invoke/javaFiles/MutableCallSite_5.java:7: error: incompatible types: Class<String> cannot be converted to MethodType
        MethodHandle methodHandle = MethodHandles.lookup().findVirtual(MutableCallSite_5.class, "add", String.class);
                                                                                                             ^
./Data/java_lang_invoke/javaFiles/MutableCallSite_5.java:8: error: cannot find symbol
        MutableCallSite callSite = new MutableCallSite(methodHandle);
        ^
  symbol:   class MutableCallSite
  location: class MutableCallSite_5
./Data/java_lang_invoke/javaFiles/MutableCallSite_5.java:8: error: cannot find symbol
        MutableCallSite callSite = new MutableCallSite(methodHandle);
                                       ^
  symbol:   class MutableCallSite
  location: class MutableCallSite_5
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
3 errors


================================================================

